welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:5: error: not found: value T
  T=new Array[Color](h)
  ^Array1:7: error: not found: value T
    T(i)=getCouleurSol()
    ^Array1:10: error: not found: value T
  replique(T,l)
           ^Array1:20: error: value length is not a member of Any
    for (k<-0 to T.length){
                   ^Array1:21: error: value k is not a member of Any
      setCouleurBrosse(T.k)
                         ^